...
                  icon: Icon(Icons.vertical_split_rounded),
                  tooltip: 'Bölünmüş Ekran',
                ),
                ButtonSegment(
                  value: MapSplitViewMode.list,
                  icon: Icon(Icons.view_list_rounded),
                  tooltip: 'Liste',
                ),
                ButtonSegment(
                  value: MapSplitViewMode.map,
                  icon: Icon(Icons.map_rounded),
                  tooltip: 'Harita',
                ),
...
